--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,9 @@
 <html>
     <HEAD>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-sacle=1">
         <title>Indecision App</title>
-        <link rel="shortcut icon" href="">
+        <link rel="icon" type="imgae/png"href="/images/favicon.png">
     </HEAD>
     <BODY>
         <div id="app"></div>
